--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div class="inputBox">
                 <input type="text" required="required">
-                <span>Username</span>
+                <span>Email</span>
                 <i></i>
             </div>
             <div class="inputBox">
@@ -36,7 +36,7 @@
             </div>
             <div class="links">
                 <a href="#">Forgot password</a>
-                <a href="#">Signup</a>
+                <a class="Register" href="https://workplacegoodluck.github.io/adminpenal.register/">Register</a>
             </div>
             <input type="submit" value="Login">
         </form>
